fixed answer not showing properly

--- a/index.css
+++ b/index.css
@@ -84,3 +84,7 @@
 .delete:hover{
     background: #00008b;
 }
+
+div .answer{
+    text-align:right;
+}
